<resources>
    <string name="app_name">ClientApp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="card_number">Card Number</string>
    <string name="user_name">User Name</string>
    <string name="password">Password </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="sending_order">Sending Order ...</string>
    <string name="order_sent">Your Order has been successfully sent we will notify you when it is ready</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="sending_failed">Order sending failed</string>
    <string name="discovery">Discovery</string>
    <string name="mycart">My Cart</string>
    <string name="market">Market</string>
    <string name="myaccount">My Account</string>
    <string name="wait_location">Waiting for location</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign out</string>
    <string name="change_language">Change Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="items_not_synced">Your items may not be synced with real items due to network issues</string>
    <string name="my_credit">My Credit</string>
    <string name="my_discounts">My Discounts</string>


    <string-array name="languages">
        <item>Fr</item>
        <item>En</item>
        <item>Ar</item>
    </string-array>

</resources>