<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_background"
        tools:context=".MainActivity">
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:paddingStart="15dp"
            android:elevation="10dp"
            android:layout_below="@+id/inputUserName"
            android:inputType="phone"
            android:layout_alignLeft="@+id/inputUserName"
            android:id="@+id/inputPhoneNumber"
            android:background="@drawable/ic_input_background"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/phone_number"
            />
        <EditText
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:paddingStart="15dp"
            android:elevation="10dp"
            android:layout_below="@+id/inputPhoneNumber"
            android:id="@+id/inputCardNumber"
            android:background="@drawable/ic_input_background"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/card_number"
            android:inputType="numberDecimal"
            />
    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:paddingStart="15dp"
        android:elevation="10dp"
        android:id="@+id/inputUserName"
        android:background="@drawable/ic_input_background"
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:paddingStart="15dp"
        android:elevation="10dp"
        android:layout_below="@+id/inputCardNumber"
        android:id="@+id/inputPassword"
        android:background="@drawable/ic_input_background"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@+id/inputPassword"
        android:paddingStart="15dp"
        android:elevation="10dp"
        android:id="@+id/inputConfirmPassword"
        android:background="@drawable/ic_input_background"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Register"
            android:background="@drawable/ic_button_background"
            android:textSize="16sp"
            android:layout_below="@+id/inputConfirmPassword"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/register_button"
            />
</RelativeLayout>
